# lox-interpreter

./: Cargo.toml  README.md
lox_ast/: Cargo.toml
lox_ast/src/: expr.rs  ident.rs  lib.rs  macros.rs  stmt.rs  visit_mut.rs
lox_bytecode/: Cargo.toml
lox_bytecode/src/: chunk.rs  compiler.rs  lib.rs  operation.rs  string.rs  value.rs
lox_bytecode_ops/: Cargo.toml
lox_bytecode_ops/src/: codec.rs  error.rs  lib.rs  operation.rs  string.rs  test.rs  writer.rs
lox_interpreter/: Cargo.toml
lox_interpreter/src/: environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  value.rs
lox_interpreter_cli/: Cargo.toml
lox_interpreter_cli/src/: main.rs
lox_lexer/: Cargo.toml
lox_lexer/src/: lib.rs  span.rs  token.rs
lox_macros/: Cargo.toml
lox_macros/src/: lib.rs  operations.rs  utils.rs
lox_parser/: Cargo.toml
lox_parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  position.rs  precedence.rs  span.rs  token.rs
lox_parser/src/ast/: expr.rs  ident.rs  mod.rs  stmt.rs  visit.rs  visit_mut.rs
lox_resolver/: Cargo.toml
lox_resolver/src/: error.rs  lib.rs  resolver.rs
lox_vm_cli/: Cargo.toml
lox_vm_cli/src/: main.rs
